--- a/app/src/main/res/layout/registerlayout.xml
+++ b/app/src/main/res/layout/registerlayout.xml
@@ -5,11 +5,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.RecyclerView
+    <ExpandableListView
             android:id="@+id/rvContacts"
-            android:layout_below="@+id/llClubDetailsToolbar"
+            android:groupIndicator="@null"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent"/>
 
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/registerfab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_add_black_24dp" />
+    
 </RelativeLayout>
