--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,6 +43,54 @@
                     android:src="@mipmap/ic_launcher_round"
                     android:layout_centerHorizontal="true"
                     android:elevation="8dp"/>
+
+            <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:background="@drawable/rounded_corner"
+                    android:weightSum="10">
+
+                <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:id="@+id/etqrcode"
+                        android:layout_weight="9"
+
+                        android:ellipsize="end"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center_vertical"
+                        android:fontFamily="sans-serif-medium"
+                        android:lines="1"
+                        android:paddingLeft="@dimen/_10sdp"
+                        android:paddingRight="@dimen/_10sdp"
+                        android:drawablePadding="@dimen/_5sdp"
+
+                        android:text="QR Code"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:textSize="16dp"
+                />
+                <ImageView
+                android:id="@+id/QRcodedisplay"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:src="@mipmap/ic_launcher_round"
+                android:layout_centerHorizontal="true"
+                android:elevation="8dp"/>
+
+            </LinearLayout>
+
             <LinearLayout
 
                     android:layout_width="match_parent"
