--- a/app/src/main/res/layout/checklistselected.xml
+++ b/app/src/main/res/layout/checklistselected.xml
@@ -69,22 +69,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_weight="1.5"
+                android:layout_weight="2.5"
                 android:gravity="center_vertical">
 
-            <Button
-                    android:id="@+id/btninvite"
+            <CheckBox
+                    android:id="@+id/check_icon"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="@dimen/_3sdp"
-                    android:layout_marginRight="@dimen/_3sdp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_marginRight="@dimen/_5sdp"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/fill_rounded_color"
-                    android:paddingLeft="5dp"
-                    android:backgroundTint="@color/glucosio_fab_ketones"
-                    android:paddingRight="5dp"
-                    android:textAllCaps="false"
-                    android:text="Add"
                     android:textColor="@android:color/white"
                     android:textSize="14dp"/>
 
